--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,12 @@
-<h1>Todo App</h1>
-<p>
+<div class="center hero-unit">
+  <h1>Welcome to the Todo App</h1>
+
+  <h2>
   This is the home page for the
   <a href="#">Ruby on Rails</a>
   todo application.
-</p>
+  </h2>
+<%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
+</div>
+
+<%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
