--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,12 +1,29 @@
-<div class="center hero-unit">
-  <h1>Welcome to the Todo App</h1>
+<% if signed_in? %>
+  <div class="row">
+    <aside class="span4">
+      <section>
+        <%= render 'shared/user_info' %>
+      </section>
+      <section>
+        <%= render 'shared/task_form' %>
+      </section>
+    </aside>
+    <div class="span8">
+      <h3>Task Feed</h3>
+      <%= render 'shared/feed' %>
+    </div>
+  </div>
+<% else %>
+  <div class="center hero-unit">
+    <h1>Welcome to the Todo App</h1>
 
-  <h2>
-  This is the home page for the
-  <a href="#">Ruby on Rails</a>
-  todo application.
-  </h2>
-<%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
-</div>
+    <h2>
+    This is the home page for the
+    <a href="#">Ruby on Rails</a>
+    todo application.
+    </h2>
+  <%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %>
+  </div>
 
-<%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
+  <%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
+<% end %>
