--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -7,6 +7,6 @@
 <span>
   <%= link_to "view my profile", current_user %>
 </span>
-<span>
+<span id="task_count">
   <%= pluralize(current_user.tasks.count, "task") %>
 </span>
